--- a/WebContent/format.css
+++ b/WebContent/format.css
@@ -1,7 +1,7 @@
 @CHARSET "ISO-8859-1";
 
 body {
-    background-color: darkblue;
+    background-color: lightyellow;
 }
 
 h2 { color: #d54d7b; font-family: "Great Vibes", cursive; font-size: 165px; line-height: 160px; font-weight: normal; margin-bottom: 0px; margin-top: 40px; text-align: center; text-shadow: 0 1px 1px #fff; }
